# pyproject-container

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-tests.txt  requirements.txt
python/pyproject-container/: __init__.py  vars.py
python/pyproject_container/: __main__.py  app.py
