[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproject_container"
description = "project description"
version = "0.1.0"
dependencies = [
    "flask",
    "gunicorn",
]

authors = [
    {name = "the-citto", email = "my.email@domain.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT",
    "Operating System :: Linux"
]

[project.optional-dependencies]
tests = [
    "mypy",
    "pytest",
    "ruff",
    "pyright",
]
dev = [
    "ipython",
]

[project.scripts]
pyproject_container = "pyproject_container:__main__.main"


[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pyright]
# pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

include = [
    "python",
    "tests",
]
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "_old",
    "_tmp",
]

[tool.mypy]
# python_version = "3.12"
python_executable = ".venv/bin/python"
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "_old",
    "_tmp",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true


[tool.ruff]
# target-version = "py312"
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "_old",
    "_tmp",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "ERA001", # Found commented-out code
    # "PLR2044", # Line with empty comment
    # "TD003", # Missing issue link on the line following this TODO
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    # "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    # "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison
    "S101",  # Use of `assert` detected
    # "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.ruff.isort]
known-first-party = ["pyproject_container"]
lines-after-imports = 3


